err/migbq.err
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/cachetools'...
Listing './lib/python3.5/site-packages/cachetools-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/concurrent_log_handler'...
Listing './lib/python3.5/site-packages/concurrent_log_handler-0.9.7.dist-info'...
Listing './lib/python3.5/site-packages/concurrent_log_handler.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/api'...
Listing './lib/python3.5/site-packages/google/api/core'...
Listing './lib/python3.5/site-packages/google/api/core/future'...
Listing './lib/python3.5/site-packages/google/api/core/helpers'...
Listing './lib/python3.5/site-packages/google/auth'...
Listing './lib/python3.5/site-packages/google/auth/compute_engine'...
Listing './lib/python3.5/site-packages/google/auth/crypt'...
Listing './lib/python3.5/site-packages/google/auth/transport'...
Listing './lib/python3.5/site-packages/google/cloud'...
Listing './lib/python3.5/site-packages/google/cloud/bigquery'...
Listing './lib/python3.5/site-packages/google/cloud/bigquery/dbapi'...
Listing './lib/python3.5/site-packages/google/logging'...
Listing './lib/python3.5/site-packages/google/logging/type'...
Listing './lib/python3.5/site-packages/google/longrunning'...
Listing './lib/python3.5/site-packages/google/oauth2'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/google/resumable_media'...
Listing './lib/python3.5/site-packages/google/resumable_media/requests'...
Listing './lib/python3.5/site-packages/google/rpc'...
Listing './lib/python3.5/site-packages/google/type'...
Listing './lib/python3.5/site-packages/google_auth-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/google_cloud_bigquery-0.27.0.dist-info'...
Listing './lib/python3.5/site-packages/google_cloud_core-0.27.1.dist-info'...
Listing './lib/python3.5/site-packages/google_resumable_media-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/googleapis_common_protos-1.5.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/migbq'...
Compiling './lib/python3.5/site-packages/migbq/BQMig.py'...
***   File "./lib/python3.5/site-packages/migbq/BQMig.py", line 64
    print "start check_job_finish() ..."
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/migbq/BigQueryForwarder.py'...
***   File "./lib/python3.5/site-packages/migbq/BigQueryForwarder.py", line 302
    print "insert data Returns : %s " % ret
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/migbq/BigQueryJobChecker.py'...
***   File "./lib/python3.5/site-packages/migbq/BigQueryJobChecker.py", line 28
    print "start check jobId : %s" % jobId
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/migbq/Forwarder.py'...
***   File "./lib/python3.5/site-packages/migbq/Forwarder.py", line 7
    from __builtin__ import basestring, False
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/migbq/MigrationMetadataManager.py'...
***   File "./lib/python3.5/site-packages/migbq/MigrationMetadataManager.py", line 34
    from __builtin__ import False
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/migbq/migutils.py'...
***   File "./lib/python3.5/site-packages/migbq/migutils.py", line 52
    print "logger cannot initialized %s, %s, %s" % sys.exc_info()
                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/migbq-0.0.72.dist-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/peewee_mssql-0.1.2-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1_modules'...
Listing './lib/python3.5/site-packages/pyasn1_modules-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/pymssql-2.1.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/rsa'...
Listing './lib/python3.5/site-packages/rsa-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-38.4.0.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/ujson-1.35.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
